infra/k8s/apps/authservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authservice
  namespace: platform
  labels:
    app: authservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authservice
  template:
    metadata:
      labels:
        app: authservice
    spec:
      containers:
        - name: authservice
          image: authservice:local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
          resources:
            requests: { memory: "256Mi", cpu: "250m" }
            limits: { memory: "512Mi", cpu: "500m" }
          startupProbe:
            httpGet: { path: /actuator/health, port: 8081 }
            periodSeconds: 10
            failureThreshold: 60
          readinessProbe:
            httpGet: { path: /actuator/health, port: 8081 }
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet: { path: /actuator/health, port: 8081 }
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: authservice
  namespace: platform
spec:
  type: ClusterIP
  selector:
    app: authservice
  ports:
    - port: 8081
      targetPort: 8081
