infra/k8s/apps/orderservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orderservice
  namespace: platform
  labels:
    app: orderservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orderservice
  template:
    metadata:
      labels:
        app: orderservice
    spec:
      containers:
        - name: orderservice
          image: orderservice:local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8082
          resources:
            requests: { memory: "256Mi", cpu: "250m" }
            limits: { memory: "512Mi", cpu: "500m" }
          startupProbe:
            httpGet: { path: /actuator/health, port: 8082 }
            periodSeconds: 10
            failureThreshold: 60
          readinessProbe:
            httpGet: { path: /actuator/health, port: 8082 }
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet: { path: /actuator/health, port: 8082 }
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: orderservice
  namespace: platform
spec:
  type: ClusterIP
  selector:
    app: orderservice
  ports:
    - port: 8082
      targetPort: 8082
