infra/k8s/apps/paymentservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paymentservice
  namespace: platform
  labels:
    app: paymentservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paymentservice
  template:
    metadata:
      labels:
        app: paymentservice
    spec:
      containers:
        - name: paymentservice
          image: paymentservice:local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8083
          resources:
            requests: { memory: "256Mi", cpu: "250m" }
            limits: { memory: "512Mi", cpu: "500m" }
          startupProbe:
            httpGet: { path: /actuator/health, port: 8083 }
            periodSeconds: 10
            failureThreshold: 60
          readinessProbe:
            httpGet: { path: /actuator/health, port: 8083 }
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet: { path: /actuator/health, port: 8083 }
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: paymentservice
  namespace: platform
spec:
  type: ClusterIP
  selector:
    app: paymentservice
  ports:
    - port: 8083
      targetPort: 8083
