infra/k8s/apps/userservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userservice
  namespace: platform
  labels:
    app: userservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userservice
  template:
    metadata:
      labels:
        app: userservice
    spec:
      containers:
        - name: userservice
          image: userservice:local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests: { memory: "256Mi", cpu: "250m" }
            limits: { memory: "512Mi", cpu: "500m" }
          startupProbe:
            httpGet: { path: /actuator/health, port: 8080 }
            periodSeconds: 10
            failureThreshold: 60
          readinessProbe:
            httpGet: { path: /actuator/health, port: 8080 }
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet: { path: /actuator/health, port: 8080 }
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: userservice
  namespace: platform
spec:
  type: ClusterIP
  selector:
    app: userservice
  ports:
    - port: 8080
      targetPort: 8080
